Overflow Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -121,13 +121,18 @@ img {
     width: 100%
 }
 
-.section {
+.section-vh {
     scroll-snap-align: start;
     scroll-snap-stop: always;
     height: 100vh;
     width: 100%;
     position: relative;
     overflow: hidden
+}
+
+.section {
+    width: 100%;
+    position: relative;
 }
 
 .section-contents {
@@ -150,8 +155,7 @@ img {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
-    margin: 0 20px;
-    max-width: 440px
+    max-width: 40%
 }
 
 .contents-right {
